syntax = "proto3";

package proto;

service NameService {
  rpc ConnectMessageServer (stream HeartBeat) returns (stream ConnectionInfo) {}
  rpc CreateRoom (CreateRoomRequest) returns (CreateRoomResponse) {}
}

message HeartBeat{
  ConnectionHeader header = 1;
}

message ConnectionInfo{
  ConnectionHeader header = 1;
}

message ConnectionHeader {
  string message_server_id = 1;
}

message CreateRoomRequest {
  string id = 1;
}

message CreateRoomResponse {}